# shipyard

./: .gitignore  README.md  docker-compose.yml  tsconfig.json
.devcontainer/: devcontainer.json  docker-compose.dev.yml
docker/: Dockerfile  Dockerfile.dev
docs/: api-comparison.md  query.md  resp-size.md  testing.md
pipeline/: api-pipeline.sh  pipeline.sh
services/: README.md
services/gharvest/: README.md  pyproject.toml
services/gharvest/gharvest/: __init__.py  sampling.py
services/gharvest/scripts/: combine_nodes_and_edges.py  edge_harvest.py  graph_harvest.py  node_harvest.py  nodenorm_curie_harvest.py
services/kudzuroot/: config.json  pyproject.toml
services/kudzuroot/kudr/: __main__.py  load.py  multihop.py  operations.py  setup.py
services/kuzu-server/: kuzu_server.py  requirements.txt  start_server.sh
src/: package-lock.json  package.json
src/configuration/: db.ts  environment.ts  options.ts  setup.ts  teardown.ts
src/definitions/: configuration.ts  curie_sampling.ts  es_basic.ts  es_fixed.ts  es_fixed_batch.ts  graph_sampling.ts  kuzudb.ts  neo4j_basic.ts  neo4j_fixed.ts  neo4j_fixed_batch.ts  neo4j_floating_object.ts  neo4j_floating_object_order1.ts  neo4j_floating_predicate.ts  neo4j_floating_predicate_order1.ts  neo4j_floating_subject.ts  neo4j_floating_subject_order1.ts  nodenorm.ts  sampling.ts
src/lib/: curie.ts  graph.ts  sampling.ts  traffic.ts  trapi.ts
src/testoutput/: README.md
src/tests/nodenorm/: api.equality.ts  stress.elasticsearch.biothings-ci.ts  stress.elasticsearch.biothings-es8.ts  stress.elasticsearch.transltr-es8.ts  stress.redis.renci.ci.ts  stress.redis.renci.ts  traffic.elasticsearch.biothings-ci.ts  traffic.elasticsearch.biothings-es8.ts  traffic.elasticsearch.transltr-es8.ts  traffic.redis.renci.ci.ts  (+1 more)
(+51 files in other folders)
